--- a/config/GregTech/GregTech.lang
+++ b/config/GregTech/GregTech.lang
@@ -718,12 +718,14 @@ languagefile {
     S:item.GT_Hammer_Bronze.tooltip_3=Also used to toggle general Machine states
     S:item.GT_Hammer_Bronze.tooltip_4=Usable as Prospectors Hammer
     S:item.GT_Hammer_Bronze.tooltip_main=To give a Machine a hard whack
+    S:item.GT_Hammer_Bronze.tooltip_mfr=Works as Minefactory Hammer too
     S:item.GT_Hammer_Iron.name=Iron Hammer
     S:item.GT_Hammer_Iron.tooltip_1=Used to craft Plates from Ingots
     S:item.GT_Hammer_Iron.tooltip_2=Can rotate some Blocks as well
     S:item.GT_Hammer_Iron.tooltip_3=Also used to toggle general Machine states
     S:item.GT_Hammer_Iron.tooltip_4=Usable as Prospectors Hammer
     S:item.GT_Hammer_Iron.tooltip_main=To give a Machine a hard whack
+    S:item.GT_Hammer_Iron.tooltip_mfr=Works as Minefactory Hammer too
     S:item.GT_Hammer_Rubber.name=Rubber Hammer
     S:item.GT_Hammer_Rubber.tooltip_1=Can enable/disable Machines
     S:item.GT_Hammer_Rubber.tooltip_2=Can rotate some Blocks as well
@@ -735,12 +737,14 @@ languagefile {
     S:item.GT_Hammer_Steel.tooltip_3=Also used to toggle general Machine states
     S:item.GT_Hammer_Steel.tooltip_4=Usable as Prospectors Hammer
     S:item.GT_Hammer_Steel.tooltip_main=To give a Machine a hard whack
+    S:item.GT_Hammer_Steel.tooltip_mfr=Works as Minefactory Hammer too
     S:item.GT_Hammer_Tungstensteel.name=Tungstensteel Hammer
     S:item.GT_Hammer_Tungstensteel.tooltip_1=Used to craft Plates from Ingots
     S:item.GT_Hammer_Tungstensteel.tooltip_2=Can rotate some Blocks as well
     S:item.GT_Hammer_Tungstensteel.tooltip_3=Also used to toggle general Machine states
     S:item.GT_Hammer_Tungstensteel.tooltip_4=Usable as Prospectors Hammer
     S:item.GT_Hammer_Tungstensteel.tooltip_main=To give a Machine a hard whack
+    S:item.GT_Hammer_Tungstensteel.tooltip_mfr=Works as Minefactory Hammer too
     S:item.GT_Lava_Filter.name=Lava Filter
     S:item.GT_Lava_Filter.tooltip_main=Filters Lava in Thermal Boilers
     S:item.GT_Materials.0.name=Copper Credit
